--- a/exposed-panels/symantec-ewep-detect.yaml
+++ b/exposed-panels/symantec-ewep-detect.yaml
@@ -1,10 +1,10 @@
-id: symantec-ewep
+id: symantec-ewep-detect
 
 info:
-  name: Detect Symantec Encryption Web Email Protection
+  name: Symantec Encryption Web Email Protection Detect
   author: johnk3r
   severity: info
-  tags: panel
+  tags: panel,symantec
 
 requests:
   - method: GET
