--- a/exposed-panels/symantec/symantec-ewep-detect.yaml
+++ b/exposed-panels/symantec/symantec-ewep-detect.yaml
@@ -4,7 +4,7 @@ info:
   name: Symantec Encryption Web Email Protection Detect
   author: johnk3r
   severity: info
-  tags: panel,symantec
+  tags: panel,symantec,login
 
 requests:
   - method: GET
@@ -15,7 +15,7 @@ requests:
     matchers:
       - type: word
         words:
-          - "Symantec Corporation. All Rights Reserved"
+          - "<TITLE>Symantec Encryption Server: Web Email Protection - Login</TITLE>"
         part: body
 
       - type: status
