--- a/dns/elasticbeantalk-takeover.yaml
+++ b/dns/elasticbeantalk-takeover.yaml
@@ -9,7 +9,7 @@ info:
     - https://twitter.com/payloadartist/status/1362035009863880711
     - https://www.youtube.com/watch?v=srKIqhj_ki8
   tags: dns,takeover,aws
-  additional-fields:
+  metadata:
     comments: |
       Only CNAMEs with region specification are hijackable.
       You need to claim the CNAME in AWS portal (https://aws.amazon.com/) or via AWS CLI to confirm the takeover.
