--- a/technologies/apache/xampp-default-page.yaml
+++ b/technologies/apache/xampp-default-page.yaml
@@ -5,7 +5,7 @@ info:
   author: dhiyaneshDK
   severity: info
   reference: https://www.shodan.io/search?query=http.title%3A%22XAMPP%22&page=1
-  tags: tech,php
+  tags: tech,php,xampp,apache
 
 requests:
   - method: GET
