--- a/misconfiguration/zabbix-error.yaml
+++ b/misconfiguration/zabbix-error.yaml
@@ -5,7 +5,7 @@ info:
   author: dhiyaneshDK
   severity: low
   reference: https://www.shodan.io/search?query=http.title%3A%22Warning+%5Brefreshed+every+30+sec.%5D%22
-  tags: exposure,zabbix,debug
+  tags: zabbix,misconfig
 
 requests:
   - method: GET
