--- a/vulnerabilities/wordpress/attitude-theme-open-redirect.yaml
+++ b/vulnerabilities/wordpress/attitude-theme-open-redirect.yaml
@@ -1,11 +1,11 @@
-id: attitude-wp-theme-open-redirect
+id: attitude-theme-open-redirect
 
 info:
   name: WordPress Attitude Themes 1.1.1 Open Redirection
   author: 0x_Akoko
-  reference: https://cxsecurity.com/issue/WLB-2020030185
   severity: low
-  tags: wp,redirect
+  reference: https://cxsecurity.com/issue/WLB-2020030185
+  tags: wordpress,wp-plugin,redirect
 
 requests:
   - method: GET
